--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,6 +15,6 @@
 
 {% if page.report_download %}
 <div id="sidebar-description" class="text-center">
-	<button href="{{ page.report_download }}">Download Full Report</button>
+	<a href="{{ page.report_download }}" class="btn">Download Full Report</button>
 </div>
 {% endif %}
