make this red too

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@ article.home h6 {
 
 .anchorjs-link {
   transition: all .25s linear;
-	color: #2500ad;
+	color: #D92C35;
 }
 *:hover > .anchorjs-link {
   margin-left: -1.125em !important;
