add next / previous

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,8 +49,8 @@ body {
 
 #sidebar-description {
 	font-family: "Roboto", monospace;
-	font-size: 11px;
-	margin: 0 auto;
+	font-size: 15px;
+	margin: 10%;
 	margin-bottom: 10px;
 }
 
