--- a/_includes/post.html
+++ b/_includes/post.html
@@ -84,6 +84,36 @@
 		<hr>
 	</div>
 -->
+{% assign cat = page.categories %}
+
+{% for post in site.categories[cat] %}
+  {% if post.url == page.url %}
+    {% assign post_index0 = forloop.index0 %}
+    {% assign post_index1 = forloop.index %}
+  {% endif %}
+{% endfor %}
+
+{% for post in site.categories[cat] %}
+  {% if post_index0 == forloop.index %}
+    {% assign next_post = post %}
+  {% endif %}
+  {% if post_index1 == forloop.index0 %}
+    {% assign prev_post = post %}
+  {% endif %}
+{% endfor %}
+
+{% if prev_post %}
+  <div class="article__previous">
+    <a href="{{ prev_post.url }}">{{ prev_post.title }}</a>
+  </div>
+{% endif %}
+
+{% if next_post %}
+  <div class="article__next">
+    <a href="{{ next_post.url }}">{{ next_post.title }}</a>
+  </div>
+{% endif %}
+
 </article>
 <!-- NO IDEA WHAT THIS DOES
 <div class="clearfix"></div>
