--- a/_includes/post.html
+++ b/_includes/post.html
@@ -84,6 +84,15 @@
 		<hr>
 	</div>
 -->
+<div class="PageNavigation">
+  {% if page.previous.url %}
+    <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+  {% endif %}
+  {% if page.next.url %}
+    <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+  {% endif %}
+</div>
+
 {% assign cat = page.categories %}
 
 {% for post in site.categories[cat] %}
