try alt sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,9 @@
 <header class="sidebar-header" role="banner">
+	<!--
 	<a href="{{ site.BASE_PATH }}/">
 		<img src="{{ site.BASE_PATH }}/assets/media/sparc_logo.png" style="width:100%"/>
 	</a>
+	-->
 	<h3 class="title">
         {{ page.title }}
     </h3>
@@ -18,3 +20,16 @@
 	<a href="{{ page.report_download }}" class="btn">Download Full Report</a>
 </div>
 {% endif %}
+
+<p>
+	<a href="">Home</a>
+</p>
+<p>
+	<a href="">Download Full Report</a>
+</p>
+<p>
+	<a href="">View related issues</a>
+</p>
+<p>
+	<a href="">Take Action</a>
+</p>
