--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,6 +21,8 @@
 </div>
 {% endif %}
 
+<div id="sidebar-description">
+
 <p>
 	<a href="">Home</a>
 </p>
@@ -33,3 +35,5 @@
 <p>
 	<a href="">Take Action</a>
 </p>
+
+</div>
