better copy and bits

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,13 +27,10 @@
 	<a href="">Home</a>
 </p>
 <p>
-	<a href="">Download Full Report</a>
+	<a href="">About the authors</a>
 </p>
 <p>
-	<a href="">View related issues</a>
-</p>
-<p>
-	<a href="">Take Action</a>
+	<a href="">More from SPARC</a>
 </p>
 
 </div>
