--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,7 @@ article.home h6 {
 	transition: color .25s linear;
 }
 
-/* Handle page naviation /*
+/* Handle page naviation */
 
 .PageNavigation {
   font-size: 14px;
