--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,13 +10,13 @@
 </header>
 
 {% if page.description %}
-<div id="sidebar-description" class="text-center">
+<div id="sidebar-description">
 	{{ page.description }}
 </div>
 {% endif %}
 
 {% if page.report_download %}
-<div id="sidebar-description" class="text-center">
+<div id="sidebar-description">
 	<a href="{{ page.report_download }}" class="btn">Download Full Report</a>
 </div>
 {% endif %}
