--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,13 +24,16 @@
 <div id="sidebar-description">
 
 <p>
-	<a href="">Home</a>
+	<a href="{{ site.BASE_PATH }}">Home</a>
 </p>
 <p>
-	<a href="">About the authors</a>
+	<a href="">Take Action</a>
 </p>
 <p>
-	<a href="">More from SPARC</a>
+	<a href="{{ site.BASE_PATH }}/about">About the authors</a>
+</p>
+<p>
+	<a href="https://sparcopen.org">More from SPARC</a>
 </p>
 
 </div>
