--- a/_includes/post.html
+++ b/_includes/post.html
@@ -90,7 +90,7 @@
 <div class="PageNavigation">
 	{% if page.categories.size > 0 %}
 			<span>
-				This is part of a broader report called the <a href="{{ site.BASE_PATH }}/{{ page.categories }}">{{ post.categories }}</a>.
+				This is part of a broader report called the <a href="{{ site.BASE_PATH }}/{{ page.categories }}">{{ page.categories }}</a>.
 			</span>
 	{% endif %}
 
