--- a/_includes/post.html
+++ b/_includes/post.html
@@ -89,17 +89,17 @@
 	<hr>
 	{% if page.categories.size > 0 %}
 			<p>
-				This is part of a broader report called the <a href="{{ site.BASE_PATH }}/{{ page.categories }}">{{ page.categories }}</a>.{% if page.tags.size > 0 %} and is connected to several others issues {{ page.tags }}
+				This is part of a broader report called the <a href="{{ site.BASE_PATH }}/{{ page.categories }}">{{ page.categories }}</a>.{% if page.tags.size > 0 %} and is connected to several others issues <a href="{{ site.BASE_PATH }}/{{ page.categories }}">{{ page.tags }}</a>.
 			</p>
   {% endif %}
 	{% endif %}
 
 	<div class="PageNavigation">
   {% if page.previous.url %}
-    <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+    <a class="prev" href="{{ site.BASE_PATH }}{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
   {% endif %}
   {% if page.next.url %}
-    <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+    <a class="next" href="{{ site.BASE_PATH }}{{page.next.url}}">{{page.next.title}} &raquo;</a>
   {% endif %}
 </div>
 
