have it be cleara

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -89,8 +89,8 @@
 	<hr>
 	{% if page.category.size > 0 %}
 			<p>
-				This is part of a broader report called the <a href="{{ site.BASE_PATH }}/{{ page.category }}">{{ page.categories | replace: '-',' ' }}</a>.{% if page.tags.size > 0 %} and is connected to several others issues <a href="{{ site.BASE_PATH }}/{{ page.tags }}">{{ page.tags | sort | join: ", " | replace: '-',' ' }}</a>.
-			</p>
+				This is part of the <a href="{{ site.BASE_PATH }}/{{ page.category }}">{{ page.categories | replace: '-',' ' }}</a> {% if page.tags.size > 0 %} and is connected to several others issues <a href="{{ site.BASE_PATH }}/{{ page.tags }}">{{ page.tags | sort | join: ", " | replace: '-',' ' }}</a>.
+			</p>{{else}}.
   {% endif %}
 	{% endif %}
 
