support better mvp for non-content pages

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,7 +30,7 @@
 	<a href="">Take Action</a>
 </p>
 <p>
-	<a href="{{ site.BASE_PATH }}/about">About the authors</a>
+	<a href="{{ site.BASE_PATH }}/authors">About the authors</a>
 </p>
 <p>
 	<a href="https://sparcopen.org">More from SPARC</a>
