--- a/_includes/post.html
+++ b/_includes/post.html
@@ -89,7 +89,7 @@
 	<hr>
 	{% if page.category.size > 0 %}
 			<p>
-				This is part of the <a href="{{ site.BASE_PATH }}/{{ page.category }}">{{ page.category | replace: '-',' ' }}</a>{% if page.tags.size > 0 %} and is connected to several others issues <a href="{{ site.BASE_PATH }}/{{ for tag in page.tags }}">{{ tag }}</a>.
+				This is part of the <a href="{{ site.BASE_PATH }}/{{ page.category }}">{{ page.category | replace: '-',' ' }}</a>{% if page.tags.size > 0 %} and is connected to several others issues {% for tag in page.tags %}<a href="{{ site.BASE_PATH }}/{{ tag }}">{{ tag }}</a>{% endfor %}</a>.
 				<!-- MAKE A LOOP! -->
 			</p>
   {% endif %}
