--- a/_includes/default.html
+++ b/_includes/default.html
@@ -59,7 +59,7 @@
 	        href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" />
 	</noscript>
 
-	<!--  Essential META Tags -->
+	<!--  Essential META Tags from https://css-tricks.com/essential-meta-tags-social-media/-->
 
 <meta property="og:image" content="{{ site.BASE_PATH }}/assets/media/social-image" />
 <meta property="og:image:secure_url" content="{{ site.BASE_PATH }}/assets/media/social-image" />
@@ -68,7 +68,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@sparc_na">
 
-<!--  Non-Essential, But Recommended -->
+<!--  Non-Essential, But Recommended from https://css-tricks.com/essential-meta-tags-social-media/-->
 
 <meta property="og:site_name" content="{{site.title}}">
 <meta name="twitter:image:alt" content="SPARC Logo">
