--- a/_includes/default.html
+++ b/_includes/default.html
@@ -61,8 +61,8 @@
 
 	<!--  Essential META Tags from https://css-tricks.com/essential-meta-tags-social-media/-->
 
-<meta property="og:image" content="{{ site.BASE_PATH }}/assets/media/social-image" />
-<meta property="og:image:secure_url" content="{{ site.BASE_PATH }}/assets/media/social-image" />
+<meta property="og:image" content="{{ site.BASE_PATH }}/assets/media/social-image.png" />
+<meta property="og:image:secure_url" content="{{ site.BASE_PATH }}/assets/media/social-image.png" />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="627" />
 <meta name="twitter:card" content="summary_large_image">
