--- a/_includes/default.html
+++ b/_includes/default.html
@@ -59,17 +59,17 @@
 	        href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" />
 	</noscript>
 
-	<!--  Essential META Tags from https://css-tricks.com/essential-meta-tags-social-media/-->
+<!--  Essential META Tags from https://css-tricks.com/essential-meta-tags-social-media/ and sparc site-->
 
 <meta property="og:image" content="{{ site.BASE_PATH }}/assets/media/social-image.png" />
-<meta property="og:image:secure_url" content="{{ site.BASE_PATH }}/assets/media/social-image.png" />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="627" />
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@sparc_na">
 
-<!--  Non-Essential, But Recommended from https://css-tricks.com/essential-meta-tags-social-media/-->
+<!--  Non-Essential, But Recommended from https://css-tricks.com/essential-meta-tags-social-media/ and sparc site-->
 
+<meta property="og:locale" content="en_US" />
 <meta property="og:site_name" content="{{site.title}}">
 <meta name="twitter:image:alt" content="SPARC Logo">
 <meta property="og:type" content="website" />
