--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -39,7 +39,8 @@
 	<a href="{{ site.BASE_PATH }}/authors">About the authors</a>
 </p>
 <p>
-	<a href="https://sparcopen.org">More from SPARC</a>
+	More from <a href="https://sparcopen.org/" target="_blank"><img src="{{ site.BASE_PATH }}/assets/media/sparc_logo.png" alt="SPARC Logo" style="height: .8em;" ></a>
 </p>
+
 
 </div>
