--- a/_includes/default.html
+++ b/_includes/default.html
@@ -87,7 +87,7 @@
 <!-- sidebar.html end -->
 
 <!-- PAGE CONTENT STARTS -->
-			<div class="col-sm-8">
+			<div class="col-sm-8 offset-md-4">
 				{{ content }}
 			</div>
 <!-- PAGE CONTENT ENDS -->
