hack for sidebar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ a {
 	margin-left: 10%;
 }
 .sidebar-header .title {
-	letter-spacing: 3px;
+/*	letter-spacing: 3px; */
 	text-transform: uppercase;
 }
 
