--- a/_includes/default.html
+++ b/_includes/default.html
@@ -87,7 +87,7 @@
 <!-- sidebar.html end -->
 
 <!-- PAGE CONTENT STARTS -->
-			<div class="col-sm-8 offset-sm-5">
+			<div class="col-sm-8 offset-sm-5"> <!-- offset stops overlap with sidebar. This doesn't add up, but it does work -->
 				{{ content }}
 			</div>
 <!-- PAGE CONTENT ENDS -->
