--- a/_layouts/report.html
+++ b/_layouts/report.html
@@ -1,15 +1,4 @@
 ---
 layout: default
 ---
-<ul style="padding-top:10%">
-  {% for post in site.categories.{{page.report}} reversed %}
-    {% if post.url %}
-    <h2>
-      <a href="{% if post.link %}{{ post.link }}{% else %}{{ site.BASE_PATH }}{{ post.url }}{% endif %}">{{ post.title }}</a>{% if post.link %}{% endif %}
-    </h2>
-    <div>
-      {{ post.description }}
-    </div>
-    {% endif %}
-  {% endfor %}
-</ul>
+{% include report.html %}
