--- a/_includes/read_time.html
+++ b/_includes/read_time.html
@@ -1,8 +1,15 @@
 <span class="reading-time" title="Estimated read time">
-  {% assign words = content | number_of_words %}
-  {% if words < 360 %}
-    1 min
+  {% if post.read_time %}
+    {% assign words = post.content | strip_html | number_of_words %}
+  {% elsif page.read_time %}
+    {% assign words = page.content | strip_html | number_of_words %}
+  {% endif %}
+
+  {% if words < 200 %}
+    less than 1 minute read
+  {% elsif words == 200 %}
+    1 minute read
   {% else %}
-    {{ words | divided_by:180 }} mins
+    {{ words | divided_by:200 }} minute read
   {% endif %}
 </span>
