--- a/_includes/read_time.html
+++ b/_includes/read_time.html
@@ -1,8 +1,8 @@
-  <span class="reading-time" title="Estimated read time">
-    {% assign words = post.content | number_of_words %}
-    {% if words < 360 %}
-      1 min
-    {% else %}
-      {{ words | divided_by:180 }} mins
-    {% endif %}
-  </span>
+<span class="reading-time" title="Estimated read time">
+  {% assign words = content | number_of_words %}
+  {% if words < 360 %}
+    1 min
+  {% else %}
+    {{ words | divided_by:180 }} mins
+  {% endif %}
+</span>
