Revert "does this still work?"
This reverts commit 92bf7fedfba834080c909aa139903ca34f77548d.

--- a/_includes/read_time.html
+++ b/_includes/read_time.html
@@ -1,5 +1,5 @@
 <span class="reading-time" title="Estimated read time">
-  {% assign words = post.content | number_of_words %}
+  {% assign words = page.content | number_of_words %}
   {% if words < 360 %}
     1 min
   {% else %}
