--- a/_includes/read_time.html
+++ b/_includes/read_time.html
@@ -1,3 +1,4 @@
+<!-- From: https://carlosbecker.com/posts/jekyll-reading-time-without-plugins. This is only used for posts. A fork of it is used in line for catagories as this doesn't work -->
 <span class="reading-time" title="Estimated read time">
   {% assign words = page.content | number_of_words %}
   {% if words < 360 %}
