include reading time on sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,6 +8,9 @@
         {{ page.title }}
     </h3>
 </header>
+<div id="sidebar-description">
+{% include read_time.html %}
+</div>
 
 {% if page.description %}
 <div id="sidebar-description">
