--- a/_includes/report.html
+++ b/_includes/report.html
@@ -1,5 +1,6 @@
 <ul style="padding-top:10%">
 {{ content }}
+  {% for post in report-name reversed %}
     {% if post.url %}
     <h2>
       <a href="{% if post.link %}{{ post.link }}{% else %}{{ site.BASE_PATH }}{{ post.url }}{% endif %}">{{ post.title }}</a>{% if post.link %}{% endif %}
