--- a/_includes/report.html
+++ b/_includes/report.html
@@ -1,6 +1,6 @@
 <ul style="padding-top:10%">
 {{ content }}
-  {% for post in site.categories.page.category reversed %}
+  {% for post in site.categories[include.category] reversed %}
     {% if post.url %}
     <h2>
       <a href="{% if post.link %}{{ post.link }}{% else %}{{ site.BASE_PATH }}{{ post.url }}{% endif %}">{{ post.title }}</a>{% if post.link %}{% endif %}
