--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,9 +30,9 @@
 {% endif %}
 
 <!-- This can be set on a per page basis using action.link and action.title in the yaml -->
-{% if page.action.link.size > 0 %}
+{% if page.action_link.size > 0 %}
 <div id="sidebar-description">
-	<a href="{{ page.action.link }}" class="btn">{{page.action.title}}</a>
+	<a href="{{ page.action_link }}" class="btn">{{page.action_title}}</a>
 </div>
 {% endif %}
 
