--- a/_includes/report-contents.html
+++ b/_includes/report-contents.html
@@ -1,4 +1,4 @@
-<ul>
+<ul style="padding-top:10%">
   {% if post.url %}
   <h2>
     <a href="{% if post.link %}{{ post.link }}{% else %}{{ site.BASE_PATH }}{{ post.url }}{% endif %}">{{ post.title }}</a>{% if post.link %}{% endif %}
