red is clickable!

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -48,7 +48,7 @@
 		<a href="{{ site.BASE_PATH }}/authors">About the authors</a>
 	</p>
 	<p>
-		More from <a href="https://sparcopen.org/" target="_blank"><img src="{{ site.BASE_PATH }}/assets/media/sparc_logo.png" alt="SPARC Logo" style="height: .8em;" ></a>
+		<a href="https://sparcopen.org/" target="_blank">More from <img src="{{ site.BASE_PATH }}/assets/media/sparc_logo.png" alt="SPARC Logo" style="height: .8em;" ></a>
 	</p>
 
 </div>
