--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,28 +19,28 @@
 		{% if site.author.github %}
 		<li>
 			<a class="btn btn-default btn-sm" href="https://github.com/{{ site.author.github }}">
-				<i class="fa fa-github-alt fa-lg"></i>
+				<i class="fab fa-github-alt fa-lg"></i>
 			</a>
 		</li>
 		{% endif %}
 		{% if site.author.twitter %}
 		<li>
 			<a class="btn btn-default btn-sm" href="https://twitter.com/{{ site.author.twitter }}">
-				<i class="fa fa-twitter fa-lg"></i>
+				<i class="fab fa-twitter fa-lg"></i>
 			</a>
 		</li>
 		{% endif %}
 		{% if site.author.discord %}
 		<li>
 			<a class="btn btn-default btn-sm" href="https://discordapp.com/users/{{ site.author.discord }}">
-				<i class="fa fa-discord fa-lg"></i>
+				<i class="fab fa-discord fa-lg"></i>
 			</a>
 		</li>
 		{% endif %}	
 		{% if site.author.spotify %}
 		<li>
 			<a class="btn btn-default btn-sm" href="https://open.spotify.com/user/{{ site.author.spotify }}">
-				<i class="fa fa-spotify fa-lg"></i>
+				<i class="fab fa-spotify fa-lg"></i>
 			</a>
 		</li>
 		{% endif %}
@@ -49,27 +49,27 @@
 		{% if site.author.pinterest %}
 		<li>
 			<a class="btn btn-default btn-sm" href="https://pinterest.com/{{ site.author.pinterest }}">
-				<i class="fa fa-pinterest fa-lg"></i>
+				<i class="fab fa-pinterest fa-lg"></i>
 			</a>
 		</li>
 		{% endif %}
 		{% if site.author.instagram %}
 		<li>
 			<a class="btn btn-default btn-sm" href="https://instagram.com/{{ site.author.instagram }}">
-				<i class="fa fa-instagram fa-lg"></i>
+				<i class="fab fa-instagram fa-lg"></i>
 			</a>
 		</li>
 		{% endif %}
 		{% if site.author.linkedin %}
 		<li>
 			<a class="btn btn-default btn-sm" href="https://linkedin.com/in/{{ site.author.linkedin }}">
-				<i class="fa fa-linkedin fa-lg"></i>
+				<i class="fab fa-linkedin fa-lg"></i>
 			</a>
 		</li>
 		{% endif %}
 		<li>
 			<a class="btn btn-default btn-sm" href="{{ site.BASE_PATH }}/{{ site.rss_path }}">
-				<i class="fa fa-rss fa-lg"></i>
+				<i class="fab fa-rss fa-lg"></i>
 			</a>
 		</li>
 	</ul>
