--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -69,7 +69,7 @@
 		{% endif %}
 		<li>
 			<a class="btn btn-default btn-sm" href="{{ site.BASE_PATH }}/{{ site.rss_path }}">
-				<i class="fab fa-rss fa-lg"></i>
+				<i class="fa fa-rss fa-lg"></i>
 			</a>
 		</li>
 	</ul>
