--- a/_includes/default.html
+++ b/_includes/default.html
@@ -97,7 +97,9 @@
 
 		<footer>
 			<hr/>
-			 <p>
+			  <a href='https://www.symptoma.es/es/info/covid-19'>CoV OMS</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=b8f367d5560a6db3c96409b824c970385cdf3304'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/829583/t/0"></script>
+			<p>
 			</p>
 		</footer>
 	</div>
