--- a/_includes/default.html
+++ b/_includes/default.html
@@ -53,7 +53,7 @@
 				<i class="fa fa-twitter"></i>
 			</a>
 			{% endif %}
-			{% if site.author.email %}
+			{% if site.author.linkedin %}
 			<a type="button" class="navbar-toggle nav-link" href="https://linkedin.com/in/{{ site.author.linkedin }}">
 				<i class="fa fa-linkedin fa-lg"></i>
 			</a>
