--- a/_includes/default.html
+++ b/_includes/default.html
@@ -54,7 +54,7 @@
 			</a>
 			{% endif %}
 			{% if site.author.linkedin %}
-			<a type="button" class="navbar-toggle nav-link" href="https://linkedin.com/in/{{ site.author.linkedin }}">
+			<a type="button" class="navbar-toggle nav-link" href="http://linkedin.com/in/{{ site.author.linkedin }}">
 				<i class="fa fa-linkedin"></i>
 			</a>
 			{% endif %}
