--- a/_includes/default.html
+++ b/_includes/default.html
@@ -55,7 +55,7 @@
 			{% endif %}
 			{% if site.author.linkedin %}
 			<a type="button" class="navbar-toggle nav-link" href="http://linkedin.com/in/{{ site.author.linkedin }}">
-				<i class="fa fa-linkedin"></i>
+				<i class="fa fa-linkedin fa-lg"></i>
 			</a>
 			{% endif %}
 			<a class="navbar-brand" href="{{ site.BASE_PATH }}/">
