--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -46,18 +46,18 @@
 			</a>
 		</li>
 		{% endif %}
-		{% if site.author.linkedin %}
-		<!-- <li>
+		<!-- {% if site.author.linkedin %}
+		<li>
 			<a class="btn btn-default btn-sm" href="https://linkedin.com/in/{{ site.author.linkedin }}">
 				<i class="fa fa-linkedin fa-lg"></i>
 			</a>
-		</li> -->
+		</li>
 		{% endif %}
 		<li>
 			<a class="btn btn-default btn-sm" href="{{ site.BASE_PATH }}/{{ site.rss_path }}">
 				<i class="fa fa-rss fa-lg"></i>
 			</a>
-		</li>
+		</li> -->
 	</ul>
 </div>
 <!-- sidebar.html end -->
