--- a/_includes/default.html
+++ b/_includes/default.html
@@ -54,8 +54,8 @@
 			</a>
 			{% endif %}
 			{% if site.author.linkedin %}
-			<a type="button" class="navbar-toggle nav-link" href="mailto:{{ site.author.email }}">
-				<i class="fa fa-envelope"></i>
+			<a type="button" class="navbar-toggle nav-link" href="http://linkedin.com/in/{{ site.author.linkedin }}/">
+				<i class="fa fa-linkedin"></i>
 			</a>
 			{% endif %}
 			<a class="navbar-brand" href="{{ site.BASE_PATH }}/">
