--- a/_includes/default.html
+++ b/_includes/default.html
@@ -58,10 +58,10 @@
 				<i class="fa fa-linkedin"></i>
 			</a>
 			{% endif %}
-			<a class="navbar-brand" href="{{ site.BASE_PATH }}/">
+			<!-- <a class="navbar-brand" href="{{ site.BASE_PATH }}/">
 				<img src="//www.gravatar.com/avatar/{{site.author.email_md5}}?s=35" class="img-circle" />
 				{{ site.title }}
-			</a>
+			</a> -->
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
