--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,7 +32,7 @@
 		{% endif %}
 		{% if site.author.linkedin %}
 		<li>
-			<a class="btn btn-default btn-sm" href="http://linkedin.com/in/{{ site.author.linkedin }}/">
+			<a class="btn btn-default btn-sm" href="http://linkedin.com/in/{{ site.author.linkedin }}">
 				<i class="fa fa-linkedin fa-lg"></i>
 			</a>
 		</li>
