--- a/_includes/default.html
+++ b/_includes/default.html
@@ -98,7 +98,7 @@
 		<footer>
 			<hr/>
 			<p>
-				&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
+				&copy; {{ Welcome to the buttom. }}
 			</p>
 		</footer>
 	</div>
