--- a/_includes/default.html
+++ b/_includes/default.html
@@ -93,11 +93,12 @@
 	</div>
 
 	<div class="col-sm-9 col-sm-offset-3">
+		{{ content }}
 
 		<footer>
 			<hr/>
 			<p>
-				&copy; {{ Welcome to the buttom. }}
+				{{ Welcome to the buttom. }}
 			</p>
 		</footer>
 	</div>
