--- a/_includes/post.html
+++ b/_includes/post.html
@@ -92,9 +92,9 @@
       </section>
 
       <section class="col-sm-6 author">
-        <img src="//www.gravatar.com/avatar/{{site.author.email_md5}}" class="img-rounded author-image" />
+        <!-- <img src="//www.gravatar.com/avatar/{{site.author.email_md5}}" class="img-rounded author-image" />
         <h4 class="section-title author-name">{{site.author.name}}</h4>
-        <p class="author-bio">{{site.author.bio}}</p>
+        <p class="author-bio">{{site.author.bio}}</p> -->
       </section>
     </div>
 
